Bug 58373 - Info if the current font is missing or not has been removed from Format > Character > Font dialog
Summary: Info if the current font is missing or not has been removed from Format > Cha...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: All All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.0.0.0.beta2 target:4.1.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-12-16 19:21 UTC by Jean-Baptiste Faure
Modified: 2012-12-18 15:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
LO 3.6.4 case (198.26 KB, image/png)
2012-12-16 19:27 UTC, Jean-Baptiste Faure
Details
LO 4.0beta1 case (192.86 KB, image/png)
2012-12-16 19:27 UTC, Jean-Baptiste Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2012-12-16 19:21:55 UTC
Steps to reproduce:
1/ open an existing document in LO 3.6.x
2/ select some text and do Format > Character -> Font tab
==> you can read the following text "The same font will be used on both your printer and your screen" just above the preview, if the font is installed on your system.
If the font is not installed on your system, you can read a text saying that the font is not installed and another similar font will be used instead.

Do the same with LO 4.0 beta1 : there is no information text above the preview, so it is impossible to know if the font used to render the text is the right font.

Tested with LO 4.0 beta1 and LO 4.0 beta1+ (Build ID: 789ec89fceb949eee482ecb7731a3d7b1ac0660) under Ubuntu 12.04 x86_64

Best regards. JBF
Comment 1 Jean-Baptiste Faure 2012-12-16 19:27:01 UTC
Created attachment 71596 [details]
LO 3.6.4 case
Comment 2 Jean-Baptiste Faure 2012-12-16 19:27:45 UTC
Created attachment 71597 [details]
LO 4.0beta1 case
Comment 3 Jean-Baptiste Faure 2012-12-16 20:34:28 UTC
The string "The same font will be used on both your printer and your screen" is still in the source code :
http://opengrok.libreoffice.org/xref/core/svtools/source/control/ctrltool.src#62
That tends to confirm that there is a bug here.

Best regards. JBF
Comment 4 Julien Nabet 2012-12-16 20:43:14 UTC
On pc Debian x86-64 with master sources updated today (last commit 3bbe79eef841ae4a756593557641e32fa28c0184), I confirm this.
Comment 5 Julien Nabet 2012-12-16 21:54:02 UTC
Caolán: one for you?
Comment 6 pierre-yves samyn 2012-12-17 09:07:50 UTC
Hello

I confirm with LO 4.0beta1 & windows 7 64bits

Regards
Pierre-Yves
Comment 7 Caolán McNamara 2012-12-17 12:33:01 UTC
yeah, I removed it because the text only referred to the "Western" font and not the CJK and CTL one. But if its missed I'll restore it, technically misleading as it is under those circumstances
Comment 8 Not Assigned 2012-12-17 12:35:24 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=268352b13d54ac4195246f6fc75a9f490b8a4dea&g=libreoffice-4-0

Resolves: fdo#58373 restore label for font is printer/both or unavailable


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Not Assigned 2012-12-17 12:35:49 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b53a329a7fef6262e437f8de0a771633a731704b

Resolves: fdo#58373 restore label for font is printer/both or unavailable



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2012-12-17 12:37:08 UTC
that should do it
Comment 11 Jean-Baptiste Faure 2012-12-17 13:32:18 UTC
(In reply to comment #7)
> yeah, I removed it because the text only referred to the "Western" font and
> not the CJK and CTL one. But if its missed I'll restore it, technically
> misleading as it is under those circumstances

Ah, I was not aware of this limitation. Perhaps it is time to think about a better way to notify the user that some used fonts are not available.

Thank you very much for the fix.
Verified in Version 4.0.0.0.beta1+ (Build ID: 268352b13d54ac4195246f6fc75a9f490b8a4de)

Best regards. JBF