Resolves: fdo#58373 restore label for font is printer/both or unavailable

I removed it because it only refers to the Western font and not the
two other categories. But apparently there's demand for it, so
better to restore it as misleading as it is for non-Western

Change-Id: I84c0cf858c16a9cadcba8d0c3993f0b0b7ad5a45
(cherry picked from commit b53a329a7fef6262e437f8de0a771633a731704b)